# slack-forge

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
.github/workflows/: release.yml
manifests/: claude-mcp.yaml
module/: default.nix
src/: client.rs  config.rs  main.rs  manifest.rs  oauth.rs
